Adjust the spacing issues

--- a/OMS Front End/src/components/ui/dropdown/DropdownSelect.scss
+++ b/OMS Front End/src/components/ui/dropdown/DropdownSelect.scss
@@ -134,7 +134,7 @@
   }
   .css-894a34-indicatorSeparator,
   .css-1u9des2-indicatorSeparator{
-    margin-bottom: 3px !important;
+    margin-bottom: 5px !important;
     margin-top: 6px !important;
   }
   
@@ -154,21 +154,24 @@
   }
   
   .css-1xc3v61-indicatorContainer {
-    padding: 0 5px !important;
+    padding: 3px 5px !important;
   }
   
   .css-1fdsijx-ValueContainer {
-    padding: 0 5px !important;
+    padding: 0px 5px !important;
   }
   
   .css-15lsz6c-indicatorContainer {
-    padding: 0 5px !important;
+    padding: 3px 5px !important;
   }
   
 }
 
 .css-1wy0on6{
   align-items: flex-start !important;
+}
+.css-hlgwow{
+  padding: 0 5px;
 }
   @media only screen and (max-width: 1366px) {
     .css-1hb7zxy-IndicatorsContainer {
