--- a/OMS Front End/src/pages/Security/permissions/Permission.scss
+++ b/OMS Front End/src/pages/Security/permissions/Permission.scss
@@ -256,3 +256,10 @@
     }
   }
 }
+@media only screen and (max-width: 1560px) {
+.permission-list{
+  .card{
+    margin-bottom: 0;
+  }
+}
+}
