--- a/OMS Front End/src/styles/Common.scss
+++ b/OMS Front End/src/styles/Common.scss
@@ -1964,6 +1964,11 @@ input[type="checkbox"]:disabled {
   }
 }
 
+.btn-right-sec {
+  display: flex;
+  align-items: center;
+}
+
 @media only screen and (max-width: 1560px) {
   .status-dropdown {
     .css-13cymwt-control {
@@ -2040,17 +2045,17 @@ input[type="checkbox"]:disabled {
   .card {
     .card-top-title-btn {
       min-height: unset;
-      padding-bottom: 6px;
+      padding-bottom: 8px;
     }
   }
 
   .card-section-leftcard-button-only {
-    padding: 6px 12px 10px;
+    padding: 8px 12px;
   }
 
   .main-customer-grid.setting-tab-sec {
     .card {
-      padding: 0px 12px 0;
+      padding: 3px 10px 0;
     }
   }
 
@@ -2083,18 +2088,22 @@ input[type="checkbox"]:disabled {
       }
     }
   }
-  .main-customer-grid{
-    .card{
+
+  .main-customer-grid {
+    .card {
       padding: 10px 12px 12px;
     }
-    .tab-section{
-      .tab-header{
-        button{
+
+    .tab-section {
+      .tab-header {
+        button {
           padding: 2px 15px 7px;
-          &.active{
+
+          &.active {
             padding-bottom: 10px;
             padding: 2px 15px 10px;
-            &:before{
+
+            &:before {
               border-left: 7px solid transparent;
               border-right: 7px solid transparent;
               border-top: 7px solid var(--themeColor);
@@ -2103,5 +2112,30 @@ input[type="checkbox"]:disabled {
         }
       }
     }
+  }
+
+  .card {
+    padding: 8px;
+  }
+
+  .card-email-sec {
+    .card {
+      padding: 8px;
+    }
+  }
+
+  .sidebar-contact-model {
+    .no-address {
+      .record-not-found {
+        img {
+          width: 75px;
+        }
+      }
+    }
+      .card-body-sec{
+        margin-top: 0;
+        padding-left: 0;
+        padding-right: 0;
+      }
   }
 }
